# ginseng

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.md
docs/: advanced.rst  conf.py  index.rst  tutorial.rst  visit.rst
examples/: CMakeLists.txt  enemy_game.cpp  everything.cpp  position_velocity.cpp  rendering.cpp
include/ginseng/: ginseng.hpp
src/: ginseng.hpp  main.cpp  test.cpp  test_bitset.cpp  test_count.cpp  test_emplacement.cpp  test_primary.cpp  test_query.cpp  test_stress.cpp  test_tags.cpp
